sol: exc 3