@@ -1,25 +1,10 @@
 package com.barbulescu.codedojo.exercise0003;
 
-public class Returned implements FulfillmentState {
+public record Returned(String reason) implements FulfillmentState {
 
-    private String reason;
-
-    public Returned(String reason) {
-        setReason(reason);
-    }
-
-    public String getReason() {
-        return reason;
-    }
-
-    public String reason() {
-        return reason;
-    }
-
-    public void setReason(String reason) {
-        if (reason == null || reason.trim().isEmpty()) {
+    public Returned {
+        if (reason == null || reason.isBlank()) {
             throw new IllegalArgumentException("reason must not be blank");
         }
-        this.reason = reason;
     }
 }
